// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerDexSettings.vue Should display fully synced active dex settings 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input mt-1 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch v-input--switch--inset primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-76" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                  <div class="v-input--switch__track theme--light primary--text"></div>
                  <div class="v-input--switch__thumb theme--light primary--text">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-76" class="v-label theme--light" style="left: 0px; position: relative;">Active</label>
              </div>
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//undefined/dex" target="_blank">https:///dex</a><br> <strong>Router:</strong>
          <hash-link-stub fullhash="true" hash="0x123" type="address"></hash-link-stub><br> <strong>Factory:</strong>
          <hash-link-stub fullhash="true" hash="0x456" type="address"></hash-link-stub><br> <strong>Wrapped Native Token:</strong>
          <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x789" type="address"></hash-link-stub><br>
          <hr role="separator" aria-orientation="horizontal" class="my-4 v-divider theme--light"> <strong>Pairs synchronization status:</strong>
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--rounded v-progress-linear--visible theme--light" style="height: 15px;" aria-valuenow="100">
            <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 100%; width: 0%;"></div>
            <div class="v-progress-linear__buffer"></div>
            <transition-stub name="slide-x-transition">
              <div class="v-progress-linear__determinate primary" style="width: 100%;"></div>
            </transition-stub>
            <div class="v-progress-linear__content"><small class="white--text">100.00% (10 / 10)</small></div>
          </div>
          <!---->
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-dex-settings-danger-zone-stub></explorer-dex-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;

exports[`ExplorerDexSettings.vue Should display help screen if no dex 1`] = `
<div class="container container--fluid">
  <div class="v-card v-sheet v-sheet--outlined theme--light">
    <create-explorer-dex-modal-stub></create-explorer-dex-modal-stub>
    <div class="v-card__text">
      <div class="row">
        <div align="center" class="col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-swap-horizontal theme--light primary--text text--lighten-1" style="font-size: 200px; opacity: 0.25;"></i></div>
      </div>
      <div class="row">
        <div class="spacer"></div>
        <div class="text-body-1 col col-6">
          Before setting up your dex UI, make sure you've already deployed the UniswapV2Router02 contract.<br>
          Once it's done, you'll just need the contract address to continue.
          <br><br>
          By using this integrated dex, you won't have to build another UI from scratch, your token list will
          always be synchronized, you'll have access to pool analytics right away, and your users will have everything
          they need to interact with your chain in the same place.
        </div>
        <div class="spacer"></div>
      </div>
    </div>
    <div class="v-card__actions mb-4">
      <div class="spacer"></div> <button type="button" class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Setup your Dex</span></button>
      <div class="spacer"></div>
    </div>
  </div>
</div>
`;

exports[`ExplorerDexSettings.vue Should display limited sync 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input mt-1 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch v-input--switch--inset primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-57" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                  <div class="v-input--switch__track theme--light primary--text"></div>
                  <div class="v-input--switch__thumb theme--light primary--text">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-57" class="v-label theme--light" style="left: 0px; position: relative;">Active</label>
              </div>
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//undefined/dex" target="_blank">https:///dex</a><br> <strong>Router:</strong>
          <hash-link-stub fullhash="true" hash="0x123" type="address"></hash-link-stub><br> <strong>Factory:</strong>
          <hash-link-stub fullhash="true" hash="0x456" type="address"></hash-link-stub><br> <strong>Wrapped Native Token:</strong>
          <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x789" type="address"></hash-link-stub><br>
          <hr role="separator" aria-orientation="horizontal" class="my-4 v-divider theme--light"> <strong>Pairs synchronization status:</strong>
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--rounded v-progress-linear--visible theme--light" style="height: 15px;" aria-valuenow="80">
            <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 80%; width: 20%;"></div>
            <div class="v-progress-linear__buffer"></div>
            <transition-stub name="slide-x-transition">
              <div class="v-progress-linear__determinate primary" style="width: 80%;"></div>
            </transition-stub>
            <div class="v-progress-linear__content"><small class="white--text">80.00% (8 / 10)</small></div>
          </div> You can only sync up to 1 pairs during your trial. Contact support to remove this limit.
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-dex-settings-danger-zone-stub></explorer-dex-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;

exports[`ExplorerDexSettings.vue Should display message if no subscription 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input mt-1 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch v-input--switch--inset primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-19" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                  <div class="v-input--switch__track theme--light primary--text"></div>
                  <div class="v-input--switch__thumb theme--light primary--text">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-19" class="v-label theme--light" style="left: 0px; position: relative;">Active</label>
              </div>
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//undefined/dex" target="_blank">https:///dex</a><br> <strong>Router:</strong>
          <hash-link-stub fullhash="true" hash="0x123" type="address"></hash-link-stub><br> <strong>Factory:</strong>
          <hash-link-stub fullhash="true" hash="0x456" type="address"></hash-link-stub><br> <strong>Wrapped Native Token:</strong>
          <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x789" type="address"></hash-link-stub><br>
          <hr role="separator" aria-orientation="horizontal" class="my-4 v-divider theme--light"> <strong>Pairs synchronization status:</strong>
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--rounded v-progress-linear--visible theme--light" style="height: 15px;" aria-valuenow="100">
            <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 100%; width: 0%;"></div>
            <div class="v-progress-linear__buffer"></div>
            <transition-stub name="slide-x-transition">
              <div class="v-progress-linear__determinate primary" style="width: 100%;"></div>
            </transition-stub>
            <div class="v-progress-linear__content"><small class="white--text">100.00% (10 / 10)</small></div>
          </div> Start a subscription to sync pairs.
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-dex-settings-danger-zone-stub></explorer-dex-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;

exports[`ExplorerDexSettings.vue Should display syncing dex 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col col-6">
      <div class="my-6 v-card v-sheet v-sheet--outlined theme--light">
        <div class="v-card__text">
          <div class="v-input mt-1 v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch v-input--switch--inset primary--text">
            <div class="v-input__control">
              <div class="v-input__slot">
                <div class="v-input--selection-controls__input"><input aria-checked="true" id="input-38" role="switch" type="checkbox" aria-disabled="false" value="">
                  <div class="v-input--selection-controls__ripple primary--text"></div>
                  <div class="v-input--switch__track theme--light primary--text"></div>
                  <div class="v-input--switch__thumb theme--light primary--text">
                    <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                  </div>
                </div><label for="input-38" class="v-label theme--light" style="left: 0px; position: relative;">Active</label>
              </div>
              <div class="v-messages theme--light primary--text">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div> <strong>URL:</strong> <a href="//undefined/dex" target="_blank">https:///dex</a><br> <strong>Router:</strong>
          <hash-link-stub fullhash="true" hash="0x123" type="address"></hash-link-stub><br> <strong>Factory:</strong>
          <hash-link-stub fullhash="true" hash="0x456" type="address"></hash-link-stub><br> <strong>Wrapped Native Token:</strong>
          <hash-link-stub contract="[object Object]" withtokenname="true" withname="true" hash="0x789" type="address"></hash-link-stub><br>
          <hr role="separator" aria-orientation="horizontal" class="my-4 v-divider theme--light"> <strong>Pairs synchronization status:</strong>
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-linear v-progress-linear--rounded v-progress-linear--visible theme--light" style="height: 15px;" aria-valuenow="80">
            <div class="v-progress-linear__background primary" style="opacity: 0.3; left: 80%; width: 20%;"></div>
            <div class="v-progress-linear__buffer"></div>
            <transition-stub name="slide-x-transition">
              <div class="v-progress-linear__determinate primary" style="width: 80%;"></div>
            </transition-stub>
            <div class="v-progress-linear__content"><small class="white--text">80.00% (8 / 10)</small></div>
          </div>
          <!---->
        </div>
      </div>
      <h4 class="error--text">Danger Zone</h4>
      <explorer-dex-settings-danger-zone-stub></explorer-dex-settings-danger-zone-stub>
    </div>
  </div>
</div>
`;
